Using proper images for different architecture builds (#4)
* Improving Go automation

* Filtering workflow events

* Fixing reusable worflows path and names

* Fixing permissions

* Fixing steps syntax

* Forgot checkout on reusable workflows

--- a/.github/workflows/main-merge-ci.yml
+++ b/.github/workflows/main-merge-ci.yml
@@ -11,5 +11,18 @@ on:
       - main
 
 jobs:
-  call-another-reusable:
-    uses: ./.github/ci.yml
+  test-and-coverage:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      
+    name: "Tests for merge to main branch"
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+    
+    # See: https://github.com/marketplace/actions/checkout
+    - name: "Checkout repository"
+      uses: actions/checkout@v3
+
+    - uses: ./.github/workflows/ci.yml
