--- a/.github/workflows/pr-ci.yaml
+++ b/.github/workflows/pr-ci.yaml
@@ -9,5 +9,21 @@ on:
   pull_request:
 
 jobs:
-  call-another-reusable:
-    uses: ./.github/ci.yml
+    
+
+  test-and-coverage:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+
+    name: "Tests for Pull Requests"
+    if: ${{ github.ref != 'refs/heads/main' || github.event.pull_request.merged != true }}
+    
+    steps:
+    
+    # See: https://github.com/marketplace/actions/checkout
+    - name: "Checkout repository"
+      uses: actions/checkout@v3
+
+    - uses: ./.github/workflows/ci.yml
