--- a/.github/actions/publish-package/action.yml
+++ b/.github/actions/publish-package/action.yml
@@ -1,61 +1,51 @@
-name: "Publish Package"
 
-# The workflow below runs when the release event triggers with a Pull Request is closed and merged.
-# For more information on the release event.
-# See: [Events that trigger workflows](https://docs.github.com/en/actions/reference/events-that-trigger-workflows#release)
-# See: https://localheinz.com/articles/2022/01/24/creating-releases-with-github-actions/
+name: "Release Go binary package"
+author: "Alexandre Marcondes <alexandre.marcondes@gmail.com>"
+description: "Build and Release Go Binaries to GitHub Release Assets"
 
-on: 
-  workflow_call:
-    inputs:
-        goos: 
-          name: 'OS to build'
-          default: 'linux'
-          required: true
-          type: string
-        goarch: 
-          name: 'Architecture to build'
-          default: 'amd64'
-          required: true
-          type: string
+inputs:
+  token:
+    description: "GITHUB_TOKEN for uploading releases to Github assets."
+    required: true
+    default: "${{ secrets.GITHUB_TOKEN }}"
+  repository:
+    description: "Repository name."
+    required: true
+    default: "${{ github.repository }}"
+  goos:
+    description: "GOOS is the running programs operating system target: one of darwin, windows, linux, and so on."
+    required: true
+    default: "linux"
+  goarch:
+    description: "GOARCH is the running programs architecture target: one of 386, amd64, arm, arm64, and so on."
+    required: true
+    default: "amd64"
 
-permissions:
-  contents: write
-  package: write
-  pull-requests: write
-
-jobs:
-  # The the release job will only run if the pull request was also merged
-  release:
-    name: "Release package"
-    steps:
-    
-    # See: https://github.com/marketplace/actions/checkout
-    - name: "Checkout repository"
-      id: checkout_repository
-      uses: actions/checkout@v3
-
+runs:
+  using: "composite"
+  steps:
+  
     # See: https://github.com/marketplace/actions/get-json-property
     - name: "Read version from release.json"
       uses: notiz-dev/github-action-json-property@release
       id: package_version
       with:
-        path: 'release.json'
-        prop_path: 'version'
+        path: "release.json"
+        prop_path: "version"
 
     # See: https://github.com/marketplace/actions/get-json-property
     - name: Read go_version from release.json
       uses: notiz-dev/github-action-json-property@release
       id: go_version
       with:
-        path: 'release.json'
-        prop_path: 'go_version'
+        path: "release.json"
+        prop_path: "go_version"
 
     # See: https://github.com/marketplace/actions/create-release
     - name: "Create release"
       uses: "actions/github-script@v5"
       with:
-        github-token: "${{ secrets.GITHUB_TOKEN }}"
+        github-token: "${{ inputs.token }}"
         script: |
           try {
             await github.rest.repos.createRelease({
@@ -75,7 +65,7 @@ jobs:
     - name: "Release versioned binary"
       uses: wangyoucao577/go-release-action@master
       with:
-        github_token: ${{ secrets.TOKEN }}
+        github_token: ${{ inputs.token }}
         goos: ${{ inputs.goos }}
         goarch: ${{ inputs.goarch }}
         goversion: "${{ steps.go_version.outputs.prop }}"
@@ -85,8 +75,8 @@ jobs:
         md5sum: true
         release_name: "v${{ steps.package_version.outputs.prop }}"
         release_tag: "v${{ steps.package_version.outputs.prop }}"
-        binary_name: "${{ github.repository }}"
-        asset_name: "${{ github.repository }}-${{ inputs.goos }}-${{ inputs.goarch }}"
+        binary_name: "${{ inputs.repository }}"
+        asset_name: "${{ inputs.repository }}-${{ inputs.goos }}-${{ inputs.goarch }}"
         compress_assets: auto
 
 
@@ -94,7 +84,7 @@ jobs:
     - name: "Release latest binary"
       uses: wangyoucao577/go-release-action@master
       with:
-        github_token: ${{ secrets.TOKEN }}
+        github_token: ${{ inputs.token }}
         goos: ${{ inputs.goos }}
         goarch: ${{ inputs.goarch }}
         goversion: "${{ steps.go_version.outputs.prop }}"
@@ -104,7 +94,7 @@ jobs:
         md5sum: true
         release_name: "latest"
         release_tag: "latest"
-        binary_name: "${{ github.repository }}"
-        asset_name: "${{ github.repository }}-${{ inputs.goos }}-${{ inputs.goarch }}"
+        binary_name: "${{ inputs.repository }}"
+        asset_name: "${{ inputs.repository }}-${{ inputs.goos }}-${{ inputs.goarch }}"
         compress_assets: auto
         overwrite: true
