--- a/.github/workflows/main-merge-ci.yml
+++ b/.github/workflows/main-merge-ci.yml
@@ -13,16 +13,17 @@ on:
 jobs:
   test-and-coverage:
     runs-on: ubuntu-latest
+
     permissions:
-      contents: read
+      contents: write
       
     name: "Tests for merge to main branch"
     if: github.ref == 'refs/heads/main'
 
     steps:
     
-    # See: https://github.com/marketplace/actions/checkout
-    - name: "Checkout repository"
-      uses: actions/checkout@v3
+      # See: https://github.com/marketplace/actions/checkout
+      - name: "Checkout repository"
+        uses: actions/checkout@v3
 
-    - uses: ./.github/workflows/ci.yml
+      - uses: ./.github/actions/ci
