--- a/.github/workflows/pr-ci.yaml
+++ b/.github/workflows/pr-ci.yaml
@@ -9,12 +9,11 @@ on:
   pull_request:
 
 jobs:
-    
-
   test-and-coverage:
     runs-on: ubuntu-latest
+
     permissions:
-      contents: read
+      contents: write
       pull-requests: write
 
     name: "Tests for Pull Requests"
@@ -22,8 +21,8 @@ jobs:
     
     steps:
     
-    # See: https://github.com/marketplace/actions/checkout
-    - name: "Checkout repository"
-      uses: actions/checkout@v3
+      # See: https://github.com/marketplace/actions/checkout
+      - name: "Checkout repository"
+        uses: actions/checkout@v3
 
-    - uses: ./.github/workflows/ci.yml
+      - uses: ./.github/actions/ci
