--- a/.github/workflows/on-release-created.yml
+++ b/.github/workflows/on-release-created.yml
@@ -3,7 +3,6 @@ name: "Submit release assets"
 # The workflow below runs when the release event triggers when releases are created.
 # For more information on the release event.
 # See: [Events that trigger workflows](https://docs.github.com/en/actions/reference/events-that-trigger-workflows#release)
-# See: https://localheinz.com/articles/2022/01/24/creating-releases-with-github-actions/
 
 on:
   release:
@@ -14,7 +13,7 @@ on:
 jobs:
   release-linux:
     # The the release job will only run if a release is created or if the latest release is edited/updated
-    if: ${{ github.event.release.action == 'created' || ( github.event.release.action == 'edited' && github.event.release.release.tag_name == 'latest' ) }}
+    if: ${{ github.event.action == 'created' || ( github.event.action == 'edited' && github.event.release.tag_name == 'latest' ) }}
     name: "Publish Linux packages"
     runs-on: ubuntu-latest
 
@@ -43,7 +42,7 @@ jobs:
 
   release-macos:
     # The the release job will only run if a release is created or if the latest release is edited/updated
-    if: ${{ github.event.release.action == 'created' || ( github.event.release.action == 'edited' && github.event.release.release.tag_name == 'latest' ) }}
+    if: ${{ github.event.action == 'created' || ( github.event.action == 'edited' && github.event.release.tag_name == 'latest' ) }}
     name: "Publish macOS packages"
     runs-on: ubuntu-latest
 
@@ -72,7 +71,7 @@ jobs:
 
   release-windows:
     # The the release job will only run if a release is created or if the latest release is edited/updated
-    if: ${{ github.event.release.action == 'created' || ( github.event.release.action == 'edited' && github.event.release.tag_name == 'latest' ) }}
+    if: ${{ github.event.action == 'created' || ( github.event.action == 'edited' && github.event.release.tag_name == 'latest' ) }}
     name: "Publish Windows packages"
     runs-on: ubuntu-latest
 
