--- a/.github/actions/publish-package/action.yml
+++ b/.github/actions/publish-package/action.yml
@@ -28,6 +28,11 @@ inputs:
     required: true
     type: string
     default: ""
+  tag:
+    description: "Git tag to use for the package publishing."
+    required: true
+    type: string
+    default:  ${{ github.ref_name }}
 
 runs:
   using: "composite"
@@ -61,9 +66,9 @@ runs:
         extra_files: LICENSE README.md
         sha256sum: true
         md5sum: true
-        release_name: "v${{ steps.package_version.outputs.prop }}"
-        release_tag: "v${{ steps.package_version.outputs.prop }}"
+        release_name: "${{ inputs.tag }}"
+        release_tag: "${{ inputs.tag }}"
         binary_name: "${{ inputs.repository }}${{ inputs.extension }}"
-        asset_name: "${{ inputs.repository }}-${{ inputs.goos }}-${{ inputs.goarch }}"
+        asset_name: "${{ inputs.repository }}-${{ inputs.goos }}-${{ inputs.goarch }}-${{ steps.package_version.outputs.prop }}"
         compress_assets: auto
         overwrite: true
