--- a/.github/workflows/on-push-version-tags.yml
+++ b/.github/workflows/on-push-version-tags.yml
@@ -1,19 +1,20 @@
-name: "Submit release assets"
+name: "Update released versions"
 
-# The workflow below runs when the release event triggers when releases are created.
+# The workflow below runs when the release event triggers when tags are created.
 # For more information on the release event.
-# See: [Events that trigger workflows](https://docs.github.com/en/actions/reference/events-that-trigger-workflows#release)
+# See: [Events that trigger workflows](https://docs.github.com/en/actions/reference/events-that-trigger-workflows#push)
 
 on:
-  release:
-    types:
-      - created
-      - edited
+  push:
+    branches-ignore:
+      - '**'
+    tags:
+      - 'v*.*'
+      - 'v*'
+      - 'latest'
 
 jobs:
   release-linux:
-    # The the release job will only run if a release is created or if the latest release is edited/updated
-    if: ${{ github.event.action == 'created' || ( github.event.action == 'edited' && github.event.release.tag_name == 'latest' ) }}
     name: "Publish Linux packages"
     runs-on: ubuntu-latest
 
@@ -29,9 +30,10 @@ jobs:
       pull-requests: write
 
     steps:
-    
+
       # See: https://github.com/marketplace/actions/checkout
       - name: "Checkout repository"
+        id: checkout
         uses: actions/checkout@v3
 
       - uses: ./.github/actions/publish-package
@@ -39,10 +41,9 @@ jobs:
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
           extension: ""
+          tag: ${{ github.ref_name }}
 
   release-macos:
-    # The the release job will only run if a release is created or if the latest release is edited/updated
-    if: ${{ github.event.action == 'created' || ( github.event.action == 'edited' && github.event.release.tag_name == 'latest' ) }}
     name: "Publish macOS packages"
     runs-on: ubuntu-latest
 
@@ -68,10 +69,9 @@ jobs:
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
           extension: ""
+          tag: ${{ github.ref_name }}
 
   release-windows:
-    # The the release job will only run if a release is created or if the latest release is edited/updated
-    if: ${{ github.event.action == 'created' || ( github.event.action == 'edited' && github.event.release.tag_name == 'latest' ) }}
     name: "Publish Windows packages"
     runs-on: ubuntu-latest
 
@@ -97,3 +97,4 @@ jobs:
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
           extension: ".exe"
+          tag: ${{ github.ref_name }}
