--- a/.github/workflows/on-push-version-tags.yml
+++ b/.github/workflows/on-push-version-tags.yml
@@ -59,19 +59,21 @@ jobs:
         # build and publish in parallel: linux/386, linux/amd64, linux/arm64, darwin/amd64, darwin/arm64, windows/386, windows/amd64
         goos: [linux, windows, darwin]
         goarch: ["386", amd64]
+        extension: ["", ".exe"]
         exclude:
           # windows/386 and darwin/386 seems useless 
           - goarch: "386"
             goos: windows
           - goarch: "386"
             goos: darwin
-        include:
-          - goarch: linux
-            extension: ""
-          - goarch: darwin
-            extension: ""
-          - goarch: windows
-            extension: ".exe"
+          # Linux and macOS do not have extension
+          - extension: ".exe"
+            goos: darwin
+          - extension: ".exe"
+            goos: linux
+          # Windows should only have ".exe" extension
+          - extension: ""
+            goos: windows
 
     permissions:
       contents: write
@@ -79,6 +81,10 @@ jobs:
       pull-requests: write
 
     steps:
+
+      # See: https://github.com/marketplace/actions/debug-action
+      - name: "Print the environment variables and the event payload"
+        uses: hmarr/debug-action@v2
 
       # See: https://github.com/marketplace/actions/checkout
       - name: "Checkout repository"
